force-app/main/default/objects/Monitored_Environments__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Monitored Environments</relationshipLabel>
    <relationshipName>Monitored_Environments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>