force-app/main/default/objects/Monitored_Environments__c/fields/Last_Monitoring_Log__c.field-meta.xml
<CustomField>
    <fullName>Last_Monitoring_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Monitoring Log</label>
    <referenceTo>Monitoring_Log__c</referenceTo>
    <relationshipLabel>Monitored Environments</relationshipLabel>
    <relationshipName>Monitored_Environments</relationshipName>
    <type>Lookup</type>
</CustomField>