force-app/main/default/objects/Monitored_Environments__c/fields/Last_Scan_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Scan_Status__c</fullName>
    <label>Last Scan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Scanned Yet</fullName>
                <default>true</default>
                <label>Not Scanned Yet</label>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>