force-app/main/default/objects/Monitored_Environments__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>copado__Deployment_Flow__c</referenceTo>
    <relationshipLabel>Monitored Environments</relationshipLabel>
    <relationshipName>Monitored_Environments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>