force-app/main/default/objects/Monitored_Environments__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <label>Schedule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unscheduled</fullName>
                <default>true</default>
                <label>Unscheduled</label>
            </value>
            <value>
                <fullName>Use Apex Job Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>